--- a/templates/about.html
+++ b/templates/about.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block quote %}
-        <blockquote class="blockquote replacelater title"><h4 class="header pink"><span class="hide">Here at Pahuway, </span> <span class="hide">we value the virtue</span> <span class="hide"><br>of caring for one's self</span><span class="hide"> and pursuing one's own passion  </span></h4></blockquote>
+        <blockquote class="blockquote replacelater title"><h4 class='header pink'><span class='hide'>Beauty endures </span> <span class='hide'>only for as long</span> <span class='hide'> as it can be seen;</span><br><span class='hide'> goodness,</span> <span class='hide'> beautiful today,</span> <span class='hide'>will remain so tomorrow.</span> <br><br><span class='hide'>- Sappho</span></h4></blockquote>
     <br><br>
 {% endblock %}
 
